# tmp-dvsfire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.ipynb  demo.py  requirements.txt  setup.sh
data/: make.py
include/: kore.hpp
src/: CMakeLists.txt  dvs.hpp
src/_denoisor/: CMakeLists.txt
src/_denoisor/reclusive_event_denoisor/: CMakeLists.txt  module_dv.cpp  module_py.cpp  reclusive_event_denoisor.hpp
src/_detector/: CMakeLists.txt  SelectiveDetector.cpp  detector.hpp  efd.hpp  module_dv.cpp  module_py.cpp  selective_event_detector.hpp
src/_detector/selective_event_detector/: CMakeLists.txt  module_dv.cpp  module_py.cpp  selective_event_detector.hpp
src/_filter/: CMakeLists.txt  ReclusiveEventDenoisor.cpp  edn.cpp  edn.hpp  module_dv.cpp  module_py.cpp  reclusive_event_denoisor.cpp  reclusive_event_denoisor.hpp
